[package]
name = "kvs"
version = "0.1.0"
authors = ["JNhua <huajnan@foxmail.com>"]
edition = "2018"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
failure = "0.1.8"
serde_json = "1.0.57"
serde = {version = "1.0.111", features = ["derive"]}

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
tempfile = "3.1.0"
walkdir = "2.3.1"
