[package]
name = "kvs"
version = "0.1.0"
authors = ["JNhua <huajnan@foxmail.com>"]
edition = "2018"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
failure = "0.1.8"
serde_json = "1.0.57"
serde = {version = "1.0.111", features = ["derive"]}
log = "0.4.6"
env_logger = "0.6.1"
sled = "0.22.1"
structopt = "0.2.15"
crossbeam = "0.7.3"
rayon = "1.0.3"
num_cpus = "1.10.0"
crossbeam-skiplist = { version = "0.0.0", git = "https://github.com/crossbeam-rs/crossbeam.git", rev = "8cc906b" }

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
tempfile = "3.1.0"
walkdir = "2.3.1"
criterion = "0.2.11"
rand = "0.6.5"
crossbeam-utils = "0.7.2"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false